<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:title="Auto Palette"
                        android:defaultValue="false"
                        android:summary=
                            "When selected, message backgrounds will be based on avatar colors."
                        android:key="@string/auto_palette_preference" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:title="Shake to change background"
        android:summary=
            "When selected, you can switch background with a shake."
        android:key="@string/shake_change_background" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:title="Sounds"
        android:key="@string/play_sounds" />
    <ListPreference     android:title="Color Scheme"
                        android:summary="Select the color scheme that you want for the chat"
                        android:key="@string/color_scheme_preference"
                        android:defaultValue="1"
                        android:entries="@array/listArray"
                        android:entryValues="@array/listValues" />
    <ListPreference     android:title="Font Size"
                        android:summary="Select the preferred font size for displayed messages"
                        android:key="@string/font_size_preference"
                        android:defaultValue="1"
                        android:entries="@array/fontSizeArray"
                        android:entryValues="@array/listValues" />
    <ListPreference     android:title="Background"
                        android:summary="Select the preferred background"
                        android:key="@string/background_preference"
                        android:defaultValue="1"
                        android:entries="@array/backgroundArray"
                        android:entryValues="@array/backgroundValues" />
</PreferenceScreen>
